# duckdb-dggs

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  description.yml  extension_config.cmake
.cache/clangd/: compile_commands.json
.cache/clangd/release/: compile_commands.json
.github/workflows/: CI.yml  MainDistributionPipeline.yml  docs.yml  release-please.yml
docs/: DEVELOPMENT.md  functions.md  index.md  package.json
docs/.vitepress/: config.ts
docs/functions/: grid-statistics.md  hierarchical-indexes.md  neighbors.md  parent-child.md  transforms-geo.md  transforms-projtri.md  transforms-q2dd.md  transforms-q2di.md  transforms-seqnum.md  utility.md
docs/guide/: getting-started.md  grid-configuration.md
scripts/: test-wasm.sh
src/: dggrid_transform.cpp  duck_dggs_extension.cpp  igeo7_functions.cpp
src/include/: dggrid_transform.hpp  duck_dggs_extension.hpp  igeo7_functions.hpp
test/sql/: duck_dggs.test  duck_dggs_spatial.test
